src/objects/PSRO_Market_Threshold__c.object
<CustomObject>
    <description>Contains Threshold and open values from Presales opportunities based on BGs</description>
    <fields>
        <fullName>Business_Group__c</fullName>
        <description>BG</description>
        <label>Business Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Group_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_value__c</fullName>
        <description>sum of all the open  presales opportunities value based on BG</description>
        <label>Current value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Asia Pacific &amp; Japan</fullName>
                </value>
                <value>
                    <fullName>Market Europe</fullName>
                </value>
                <value>
                    <fullName>Market Greater China</fullName>
                </value>
                <value>
                    <fullName>Market India</fullName>
                </value>
                <value>
                    <fullName>Market Latin America</fullName>
                </value>
                <value>
                    <fullName>Market Middle East and Africa</fullName>
                </value>
                <value>
                    <fullName>Market North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold_value__c</fullName>
        <description>Threshold value for Presales opportunities based on BG</description>
        <label>Threshold value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Exceeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is current value exceeds Threshold value?</description>
        <label>Value Exceeded?</label>
        <type>Checkbox</type>
    </fields>
    <label>PSRO Market Threshold</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Custom_RM</fullName>
        <columns>Market__c</columns>
        <columns>Business_Group__c</columns>
        <columns>Value_Exceeded__c</columns>
        <columns>Current_value__c</columns>
        <columns>Threshold_value__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>RO/RS Actuals versus Thresholds</label>
    </listViews>
    <listViews>
        <fullName>Threshold_View</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Business_Group__c</columns>
        <columns>Threshold_value__c</columns>
        <columns>Current_value__c</columns>
        <columns>Value_Exceeded__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Threshold View</label>
    </listViews>
    <nameField>
        <displayFormat>TH-{0000}</displayFormat>
        <label>BG_Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSRO Market Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>